2010-04-24  Theodore Kilgore <kilgota@auburn.edu>
	* jl2005bcd_decompress.c: GP_DEBUG() replaces printf()

2010-04-19  Theodore Kilgore <kilgota@auburn.edu>
	* README.jl2005c: revised.
	* README.jl2005bcd-compression: added.
	* img_enhance.[c,h]: added.
	* jl2005bcd_decompress.[c,h]: added. Decompresses data, autodetects
		thumbnails if present in raw data, can also process the
		thumbnails.
	* jpeg_memsrcdest.[c,h]: added (helper files for decompression).
		NOTE: Decompression algorithm is completely solved. Camlib
		should be added as "standard" part of libgphoto2.

2010-04-18  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Yet another camera found.

2010-04-14  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Yet another camera found.

2010-04-13  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Lots of cameras added to the camera list.

2009-04-16  Theodore Kilgore <kilgota@auburn.edu>
	* README.jl2005c: Updated.

2008-07-11  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Listing for Argus Bean Sprout added, found
		     by T.K.

2008-05-20  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Listing for Sakar Sticker Wizard no. 59379 added, found
		     by Niklas Peinecke <n.peinecke@web.de>

2008-05-12  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Listing for Sakar clipshot no. 1169x added.

2008-01-06  Theodore Kilgore <kilgota@auburn.edu>
	* *.[c,h]:   The camera of Patrick Simmons is determined to be a 
		     JL2005D. Support is introduced for distinguishing the 
		     B, C, and D versions in the places where that is needed. 
		     Support is added for downloading an arbitrary photo from
		     the list of photos in the camera. 
		     NOTE: All these cameras use compression, and how to 
		     decompress is still unknown. Thus, raw files only. 


2007-12-28  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Added support for "Amazing Spiderman" reported by 
		     Victor Hodge <vhodge@sympatico.ca> and for 