@@ -40,7 +40,7 @@ jl2005c_init (Camera *camera, GPPort *port, CameraPrivateLibrary *priv)
 	char response;
 	int model_string = 0;
 	/* Needs to be big enough to hold (0xfff + 3) * 0x10 */
-	unsigned char info[0x10020];
+	unsigned char info[0x4020];
 	const char camera_id[] = {0x4a, 0x4c, 0x32, 0x30, 0x30, 0x35};
 	int alloc_table_size;
 	int attempts = 0;
@@ -54,108 +54,64 @@ restart:
 		gp_port_open(port);
 	}
 
-
 	set_usb_in_endpoint	(camera, 0x84);
 	gp_port_write (port, "\x08\x00", 2);
 	usleep (10000);
 	gp_port_write (port, "\x95\x60", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
+	jl2005c_read_data (port, &response, 1);
 	model_string = response;
-	usleep (10000);
 	gp_port_write (port, "\x95\x61", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
+	jl2005c_read_data (port, &response, 1);
 	model_string += (response & 0xff) << 8;
-	usleep (10000);
 	gp_port_write (port, "\x95\x62", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
+	jl2005c_read_data (port, &response, 1);
 	model_string += (response & 0xff) << 16;
-	usleep (10000);
 	gp_port_write (port,"\x95\x63" , 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
+	jl2005c_read_data (port, &response, 1);
 	model_string += (response & 0xff) << 24;
 	GP_DEBUG("Model string is %08x\n", model_string);
-	usleep (10000);
 	gp_port_write (port, "\x95\x64", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-
-	usleep (10000);
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x65", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1); 
+	jl2005c_read_data (port, &response, 1);
 	/* Number of pix returned here, but not reliably reported */
 	priv->nb_entries = response & 0xff;
 	GP_DEBUG("%d frames in the camera (unreliable!)\n", priv->nb_entries);
-	usleep (10000);
-
 	gp_port_write (port, "\x95\x66", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x67", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x68", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x69", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x6a", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x6b", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x95\x6c", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-
+	jl2005c_read_data (port, &response, 1);
 	priv->data_to_read = (response & 0xff) * 0x100;
-
 	gp_port_write (port, "\x95\x6d", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
-
+	jl2005c_read_data (port, &response, 1);
 	priv->data_to_read += (response&0xff);
 	priv->total_data_in_camera = priv->data_to_read;
 	GP_DEBUG ("blocks_to_read = 0x%lx = %lu\n", priv->data_to_read,
 							priv->data_to_read);
-
 	gp_port_write (port, "\x95\x6e", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
+	jl2005c_read_data (port, &response, 1);
 	alloc_table_size = (response & 0xff) * 0x200;
 	GP_DEBUG("alloc_table_size = 0x%02x * 0x200 = 0x%x\n",
 				response & 0xff, (response & 0xff) * 0x200);
-	usleep (10000);
 	gp_port_write (port, "\x95\x6f", 2);
-	usleep (10000);
-	gp_port_read (port, &response, 1);
-	usleep (10000);
+	jl2005c_read_data (port, &response, 1);
 	gp_port_write (port, "\x0a\x00", 2);
 	usleep (10000);
 	/* Switch the inep over to 0x82. It stays there ever after. */
 	set_usb_in_endpoint	(camera, 0x82);
-	usleep (10000);
+
 	/* Read the first block of the allocation table. */
-	gp_port_read(port, (char *)info, 0x200);
+	jl2005c_read_data (port, (char *)info, 0x200);
 	if (strncmp(camera_id, (char*)info, 6)) {
 		GP_DEBUG("Error downloading alloc table\n");
 		GP_DEBUG("Init attempted %d times\n", attempts + 1);
@@ -170,12 +126,11 @@ restart:
 	/* Now check the number of photos. That is found in byte 13 of line 0
 	 * of the allocation table.
 	 */
-	usleep (10000);
 	priv->nb_entries = (info[12] & 0xff) * 0x100 | (info[13] & 0xff);
 	GP_DEBUG("Number of entries is recalculated as %d\n",
 						priv->nb_entries);
 
-	/* Just in case there was a problem, we now recalculate the total 
+	/* Just in case there was a problem, we now recalculate the total
 	 * alloc_table_size. */
 	alloc_table_size = priv->nb_entries * 0x10 + 0x30;
 	if (alloc_table_size%0x200)
@@ -187,7 +142,7 @@ restart:
 	if (alloc_table_size > 0x200)
 		gp_port_read(port, (char *)info + 0x200,
 						alloc_table_size - 0x200);
-	memmove(priv->info, info, alloc_table_size);
+	memmove(priv->table, info + 0x30, alloc_table_size - 0x30);
 	priv->model=info[6];
 	switch (priv->model) {
 	case 0x43:
@@ -220,31 +175,29 @@ restart:
 	usleep (10000);
 	priv->bytes_read_from_camera = 0;
 	priv->bytes_put_away = 0;
-
 	priv->init_done = 1;
 	GP_DEBUG("Leaving jl2005c_init\n");
 	return GP_OK;
 }
 
 int
-jl2005c_get_pic_data_size (CameraPrivateLibrary *priv, Info *info, int n)
+jl2005c_get_pic_data_size (CameraPrivateLibrary *priv, Info *table, int n)
 {
 	int size;
-	GP_DEBUG("info[48+16*n+7] = %02X\n", info[48 + 16 * n + 7]);
-	size = info[0x30 + 0x10 * n + 6] * 0x100 +info[0x30 + 0x10 * n + 7];
+	GP_DEBUG("table[16 * n + 7] = %02X\n", table[16 * n + 7]);
+	size = table[0x10 * n + 6] * 0x100 | table[0x10 * n + 7];
 	size *= priv->blocksize;
 	GP_DEBUG("size = 0x%x = %d\n", size, size);
 	return (size);
 }
 
 unsigned long
-jl2005c_get_start_of_photo(CameraPrivateLibrary *priv, Info *info,
+jl2005c_get_start_of_photo(CameraPrivateLibrary *priv, Info *table,
 							unsigned int n)
 {
 	unsigned long start;
-	start = info[0x30 + 0x10 * n + 0x0c] * 0x100 |
-			info[0x30 + 0x10 * n + 0x0d];
-	start -= info[0x30 + 0x0c] * 0x100 | info[0x30 + 0x0d];
+	start = table[0x10 * n + 0x0c] * 0x100 | table[0x10 * n + 0x0d];
+	start -= table[0x0c] * 0x100 | table[0x0d];
 	start *= priv->blocksize;
 	return start;
 }
@@ -262,15 +215,10 @@ set_usb_in_endpoint	(Camera *camera, int inep)
 }
 
 int
-jl2005c_get_picture_data (GPPort *port, char *data, int size)
+jl2005c_read_data (GPPort *port, char *data, int size)
 {
-	/* inep has been reset to 0x82 already and does not get set back */
-	/* We have to send 0b 00, presumably to access the data register,
-	 * when starting to download the first photo only. But this is already
-	 * done. So here we just download the data, between sleeps.
-	 */
+	/* These cameras tend to be slow. */
 	usleep (10000);
-	/*Data transfer begins*/
 	gp_port_read (port, data, size);
 	usleep (10000);
 	return GP_OK;
@@ -279,25 +227,23 @@ jl2005c_get_picture_data (GPPort *port, char *data, int size)
 int
 jl2005c_reset (Camera *camera, GPPort *port)
 {
-	int downloadsize = 0xfa00;
+	int downloadsize = MAX_DLSIZE;
 	/* These cameras want all data to be dumped. If that is not yet done,
 	 * then do it now, before exiting! */
 	while (camera->pl->bytes_read_from_camera <
 				    camera->pl->total_data_in_camera ) {
-		if (! camera->pl->data_cache )
-			camera->pl->data_cache = malloc (0xfa00);
-		downloadsize=0xfa00;
-		if (camera->pl->bytes_read_from_camera +0xfa00 >=
+		if (!camera->pl->data_cache )
+			camera->pl->data_cache = malloc (MAX_DLSIZE);
+		downloadsize = MAX_DLSIZE;
+		if (camera->pl->bytes_read_from_camera + MAX_DLSIZE >=
 				    camera->pl->total_data_in_camera )
 			downloadsize = camera->pl->total_data_in_camera -
 					camera->pl->bytes_read_from_camera;
-		if(downloadsize)
-			jl2005c_get_picture_data (
-					    camera->port,
+		if (downloadsize)
+			jl2005c_read_data (camera->port,
 					    (char *) camera->pl->data_cache,
 					    downloadsize);
-		camera->pl->bytes_read_from_camera 
-						+= downloadsize;
+		camera->pl->bytes_read_from_camera += downloadsize;
 	}
 	gp_port_write(port, "\x07\x00", 2);
 	return GP_OK;
